--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
 							</a>
 						</div>
 						<div class="head__itt head__itt-2">
+
 							<p>
+								<i class="icon icon-head1"></i>
 								пн.-пт.  10:00 - 19:00
 							</p>
 							<p>
@@ -31,16 +33,19 @@
 						</div>
 						<div class="head__itt head__itt-3">
 							<p>
+								<i class="icon icon-head2"></i>
 								<a href="#">
 									Ставрополь, ул. Ленина, 219, оф. 604
 								</a>
 							</p>
 							<p>
+								<i class="icon icon-head3"></i>
 								<a href="mailto:info@sale-credit.ru">info@sale-credit.ru</a>
 							</p>
 						</div>
 						<div class="head__itt head__itt-4">
 							<p>
+								<i class="icon icon-head5"></i>
 								<a href="tel:(8652) 20-50-50">(8652) <strong>20-50-50</strong></a>
 							</p>
 						</div>
@@ -54,27 +59,156 @@
 	</div><!-- .head -->	
 	
 
-	<div class="nav container">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="nav__wrr">
-					<ul class="nav__menu">
-						<li><a href="#">Кредит</a></li>
-						<li><a href="#">Ипотека</a></li>
-						<li><a href="#">Автокредит</a></li>
-						<li><a href="#">Под залог</a></li>
-						<li><a href="#">Бизнесу</a></li>
-						<li><a href="#">Рефинансирование </a></li>
-						<li><a href="#">Страхование</a></li>
-					</ul>
+	<div class="nav">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="nav__wrr">
+						<ul class="nav__menu">
+							<li><a href="#">Кредит</a></li>
+							<li><a href="#">Ипотека</a></li>
+							<li><a href="#">Автокредит</a></li>
+							<li><a href="#">Под залог</a></li>
+							<li><a href="#">Бизнесу</a></li>
+							<li><a href="#">Рефинансирование </a></li>
+							<li><a href="#">Страхование</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>	
-		
+	</div><!-- .nav -->	
 		
 	
+	<div class="jum">
 
+		<div class="jum__sliddr sliddr">
+			<div class="jum__sliddr-itt" style="background: url('../img/jum1.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+			<div class="jum__sliddr-itt" style="background: url('../img/jum1.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+			<div class="jum__sliddr-itt" style="background: url('../img/jum1.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+			<div class="jum__sliddr-itt" style="background: url('../img/jum1.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+		</div>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="jum__wrr-1 jum__wrr">
+						<img src="https://api.fnkr.net/testimg/350x200/00CED1/FFF/?text=img+placeholder">			
+					</div>
+				</div>
+				<div class="col-md-8">
+					<div class="jum__wrr-2 jum__wrr">
+						<div class="jum__titl">
+							Кредит наличными за 1 час с <br>
+							любой историей под залог <br>
+							ТС или паспорта самоходной 
+							машины
+						</div>
+						<button class="to-mod butt">ОФОРМИТЬ</button>
+						<div class="jum__sliddr-dots"></div>
+
+					</div>				
+					
+				</div>
+			</div>
+		</div>
+		
+
+	
+	</div><!-- .jum -->
+	
+	
+	<div class="featt s">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<img src="img/featt-1.png" alt="" class="featt__img">
+						<div class="featt__title">
+							помогаем экономить
+						</div>
+						<div class="featt__descr">
+							При подаче заявки через нас <br>
+							действуют специальные <br>
+							партнерские скидки
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<img src="img/featt-2.png" alt="" class="featt__img">
+						<div class="featt__title">
+							всего одна заявка
+						</div>
+						<div class="featt__descr">
+							Вся волокита - на кредитного <br>
+							специалиста Финансовых <br>
+							решений
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<img src="img/featt-3.png" alt="" class="featt__img">
+						<div class="featt__title">
+							самое выгодное
+						</div>
+						<div class="featt__descr">
+							Выбор лучшего предложения <br>
+							из более 40 банков и <br>
+							страховых
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<img src="img/featt-4.png" alt="" class="featt__img">
+						<div class="featt__title">
+							экономия времени
+						</div>
+						<div class="featt__descr">
+							Быстрое рассмотрение и 
+							сопровождение заявок по 
+							партнерским каналам
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<img src="img/featt-5.png" alt="" class="featt__img">
+						<div class="featt__title">
+							больше одобрения
+						</div>
+						<div class="featt__descr">
+							Индивидуальный подход, 
+							правильно заполненные 
+							документы и наш опыт 
+							увеличивают вероятность 
+							одобрения выбранного 
+							кредита.
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<img src="img/featt-6.png" alt="" class="featt__img">
+						<div class="featt__title">
+							кредитные истории
+						</div>
+						<div class="featt__descr">
+							Доступ ко всем бюро 
+							кредитных историй помогает 
+							улучшить результат.
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>	
+	</div>	
 
 
 		<script src="js/all.js"></script>
