--- a/src/parts/content.html
+++ b/src/parts/content.html
@@ -446,7 +446,7 @@
 
 								<div class="knoww__blck-it">
 									<input type="checkbox" name="" id="k5">
-									<label for="k5"><span></span> Автокредит БН</label>	
+									<label for="k5"><span></span> Автокредит Б/У</label>	
 								</div>
 
 								<div class="knoww__blck-it">
