--- a/src/potrebitelskiy.html
+++ b/src/potrebitelskiy.html
@@ -24,11 +24,11 @@
 	
 	<div class="jum">
 
-		<div class="jum__sliddr sliddr">
+		<div class="sliddr">
 			<div class="jum__sliddr-itt" style="background: url('../img/jum6.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+			<!-- <div class="jum__sliddr-itt" style="background: url('../img/jum6.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
 			<div class="jum__sliddr-itt" style="background: url('../img/jum6.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
-			<div class="jum__sliddr-itt" style="background: url('../img/jum6.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
-			<div class="jum__sliddr-itt" style="background: url('../img/jum6.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+			<div class="jum__sliddr-itt" style="background: url('../img/jum6.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div> -->
 		</div>
 
 		<div class="container">
@@ -44,7 +44,7 @@
 									<button class="acct">Потребительский</button>
 									<button>Под залог ПТС</button>
 									<button>Для бизнеса</button>
-									<button>Автокредит БН</button>
+									<button>Автокредит Б/У</button>
 									<button>Под залог недвиж-ти</button>
 								</div>
 
