--- a/src/strahovka.html
+++ b/src/strahovka.html
@@ -24,11 +24,11 @@
 	
 	<div class="jum">
 
-		<div class="jum__sliddr sliddr">
+		<div class="sliddr">
 			<div class="jum__sliddr-itt" style="background: url('../img/jum9.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+			<!-- <div class="jum__sliddr-itt" style="background: url('../img/jum9.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
 			<div class="jum__sliddr-itt" style="background: url('../img/jum9.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
-			<div class="jum__sliddr-itt" style="background: url('../img/jum9.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
-			<div class="jum__sliddr-itt" style="background: url('../img/jum9.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+			<div class="jum__sliddr-itt" style="background: url('../img/jum9.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div> -->
 		</div>
 
 		<div class="container">
