--- a/src/avtokredit.html
+++ b/src/avtokredit.html
@@ -24,11 +24,12 @@
 	
 	<div class="jum">
 
-		<div class="jum__sliddr sliddr">
+		<!-- <div class="jum__sliddr sliddr"> -->
+		<div class=" sliddr">
 			<div class="jum__sliddr-itt" style="background: url('../img/jum2.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+			<!-- <div class="jum__sliddr-itt" style="background: url('../img/jum2.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
 			<div class="jum__sliddr-itt" style="background: url('../img/jum2.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
-			<div class="jum__sliddr-itt" style="background: url('../img/jum2.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
-			<div class="jum__sliddr-itt" style="background: url('../img/jum2.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div>
+			<div class="jum__sliddr-itt" style="background: url('../img/jum2.jpg') center no-repeat; -webkit-background-size: cover; background-size: cover;"></div> -->
 		</div>
 
 		<div class="container">
@@ -44,7 +45,7 @@
 									<button>Потребительский</button>
 									<button>Под залог ПТС</button>
 									<button>Для бизнеса</button>
-									<button class="acct">Автокредит БН</button>
+									<button class="acct">Автокредит Б/У</button>
 									<button>Под залог недвиж-ти</button>
 								</div>
 
