--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -46,7 +46,7 @@
 							</p>
 						</div>
 						<div class="head__itt head__itt-5">
-							<button class="to-mod butt">Заказать звонок</button>
+							<button class="to-mod butt" data-targg=".modd-1">Заказать звонок</button>
 						</div>		
 					</div>
 				</div>
