--- a/src/refinansir.html
+++ b/src/refinansir.html
@@ -21,6 +21,7 @@
 		</div>
 	</div><!-- .nav -->	
 		
+@@include('parts/submenu.html')
 	
 	<div class="jum">
 
@@ -73,7 +74,7 @@
 								</div>
 								
 								<div class="txt-cent">
-									<button class="to-mod butt jum__calc-butt">ОТПРАВИТЬ ЗАЯВКУ</button>	
+									<button class="to-mod butt jum__calc-butt" data-targg=".modd-2">ОТПРАВИТЬ ЗАЯВКУ</button>		
 								</div>
 
 							</form>
