--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
 			</div>
 		</div>
 	</div><!-- .nav -->	
-		
+	
+@@include('parts/submenu.html')		
 	
 	<div class="jum">
 
@@ -45,12 +46,12 @@
 							<form action="" class="jum__calc-form">
 								
 								<div class="jum__calc-sel">
-									<button>Ипотека</button>
-									<button>Потребительский</button>
-									<button>Под залог ПТС</button>
-									<button>Для бизнеса</button>
-									<button>Автокредит Б/У</button>
-									<button class="acct">Под залог недвиж-ти</button>
+									<a href="ipoteka.html" class="button">Ипотека</a>
+									<a href="potrebitelskiy.html" class="button">Потребительский</a>
+									<a href="pts.html" class="button">Под залог ПТС</a>
+									<a href="biznesu.html" class="button">Для бизнеса</a>
+									<a href="avtokredit.html" class="button">Автокредит Б/У</a>
+									<a href="#" class="button acct">Под залог недвиж-ти</a>
 								</div>
 
 								<div class="jum__calc-blck">
@@ -78,7 +79,7 @@
 								</div>
 								
 								<div class="txt-cent">
-									<button class="to-mod butt jum__calc-butt">ОТПРАВИТЬ ЗАЯВКУ</button>	
+									<button class="to-mod butt jum__calc-butt" data-targg=".modd-2">ОТПРАВИТЬ ЗАЯВКУ</button>	
 								</div>
 
 							</form>
