--- a/src/biznesu.html
+++ b/src/biznesu.html
@@ -120,7 +120,37 @@
 	</div><!-- .jum -->
 	
 	
-	@@include('parts/content.html')
+	@@include('parts/featt-1.html')	
+
+	
+	@@include('parts/steppz1.html')	
+		
+	
+	@@include('parts/partnerz.html')	
+
+	
+	@@include('parts/reviewz.html')	
+
+
+	
+
+	<div class="knoww s">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="sect-title sect-title-5">
+						Узнайте, на какую сумму кредита <br>
+						Вы можете рассчитывать
+					</div>
+					<div class="knoww__wrapp">
+						
+						@@include('parts/bottom-form-2.html')
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 
 @@include('parts/footer.html')
