--- a/src/podzalog.html
+++ b/src/podzalog.html
@@ -110,13 +110,79 @@
 				</div>
 			</div>
 		</div>
-		
-
-	
 	</div><!-- .jum -->
 	
 	
-	@@include('parts/content.html')
+	<div class="podzal1">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					
+					<div class="podzal1__list">
+						<div class="podzal1__it">
+							<div class="podzal1__img">
+								<i class="icon icon-podzal1"></i>
+							</div>
+							<div class="podzal1__txt">
+								квартира
+							</div>	
+						</div>
+						<div class="podzal1__it">
+							<div class="podzal1__img">
+								<i class="icon icon-podzal2"></i>
+							</div>
+							<div class="podzal1__txt">
+								дом
+							</div>	
+						</div>
+						<div class="podzal1__it">
+							<div class="podzal1__img">
+								<i class="icon icon-podzal3"></i>
+							</div>
+							<div class="podzal1__txt">
+								земля
+							</div>	
+						</div>
+						<div class="podzal1__it">
+							<div class="podzal1__img">
+								<i class="icon icon-podzal4"></i>
+							</div>
+							<div class="podzal1__txt">
+								коммерческая <br>
+								недвижимость
+							</div>	
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	
+
+
+	@@include('parts/featt-2.html')		
+
+	
+	@@include('parts/steppz4.html')
+
+
+	<div class="knoww s">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="sect-title sect-title-5">
+						Узнайте решение сейчас
+					</div>
+					<div class="knoww__wrapp">
+						
+						@@include('parts/bottom-form-2.html')
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 
 @@include('parts/footer.html')
