--- a/src/strahovka.html
+++ b/src/strahovka.html
@@ -64,7 +64,82 @@
 	</div><!-- .jum -->
 	
 	
-	@@include('parts/content.html')
+	<div class="featt s">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<img src="img/featt-1-2.png" alt="" class="featt__img">
+						<div class="featt__title">
+							экономия
+						</div>
+						<div class="featt__descr">
+							При оформлении страхования <br> 
+							через нас действуют <br>
+							специальные партнерские <br>
+							скидки
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<img src="img/featt-3.png" alt="" class="featt__img">
+						<div class="featt__title">
+							самое выгодное
+						</div>
+						<div class="featt__descr">
+							Выбор объективно лучшего <br>
+							предложения на рынке
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<img src="img/featt-2.png" alt="" class="featt__img">
+						<div class="featt__title">
+							всего одна заявка
+						</div>
+						<div class="featt__descr">
+							Не придется ездить по разным <br>
+							офисам и ждать очередь - все <br>
+							страховые в одном месте!
+
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>	
+	</div>	
+
+	
+	@@include('parts/steppz6.html')	
+	
+		
+	
+	@@include('parts/partnerz.html')	
+
+	
+	@@include('parts/reviewz.html')
+	
+
+	<div class="knoww s">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="sect-title sect-title-5">
+						Узнайте, стоимость <br>
+						страхования сейчас
+					</div>
+					<div class="knoww__wrapp">
+						
+						@@include('parts/bottom-form.html')	
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 
 @@include('parts/footer.html')
