--- a/src/avtokredit.html
+++ b/src/avtokredit.html
@@ -123,7 +123,34 @@
 	</div><!-- .jum -->
 	
 	
-	@@include('parts/content.html')
+	@@include('parts/featt-1.html')	
+
+	
+	@@include('parts/steppz2.html')	
+		
+	
+	@@include('parts/partnerz.html')	
+
+	
+	@@include('parts/reviewz.html')	
+
+
+	
+
+	<div class="knoww s">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="sect-title sect-title-5">
+						Узнайте решение сейчас. Оставьте заявку
+					</div>
+					
+					@@include('parts/bottom-form-2.html')
+
+				</div>
+			</div>
+		</div>
+	</div>
 	
 
 @@include('parts/footer.html')
