--- a/src/potrebitelskiy.html
+++ b/src/potrebitelskiy.html
@@ -122,7 +122,37 @@
 	</div><!-- .jum -->
 	
 	
-	@@include('parts/content.html')
+	@@include('parts/featt-1.html')	
+
+	
+	@@include('parts/steppz1.html')	
+		
+
+		
+	@@include('parts/partnerz.html')	
+
+	
+	@@include('parts/reviewz.html')	
+	
+
+	<div class="knoww s">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="sect-title sect-title-5">
+						Узнайте, дадут ли Вам кредит, в <br>
+						какой сумме и на каких условиях, <br> 
+						оставьте заявку:
+					</div>
+					<div class="knoww__wrapp">
+						
+						@@include('parts/bottom-form.html')
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 
 @@include('parts/footer.html')
