--- a/src/parts/bottom-form.html
+++ b/src/parts/bottom-form.html
@@ -45,7 +45,7 @@
 								
 								<div class="knoww__input-wrr">
 									<label>Телефон <span class="req">*</span></label>
-									<input type="text" name="kd_name" placeholder="8-999-999-99-99">
+									<input type="text" name="kd_name" class="kd-inp__phone" placeholder="+7(999)-999-99-99">
 								</div>	
 
 								<div class="knoww__input-wrr">
