--- a/src/index.html
+++ b/src/index.html
@@ -59,18 +59,18 @@
 								  <input class="jum__calc-inp" type="text" id="summ" readonly >
 								</div>
 								  								 
-								<div class="jum__calc-sliddr" id="slider_summ" data-defValue="110000"></div>
+								<div class="jum__calc-sliddr" id="slider_summ" data-minValue="100000" data-maxValue="10000000" data-defValue="300000"></div>
 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="srok">СРОК КРЕДИТА (ЛЕТ)</label>
 								  <input class="jum__calc-inp" type="text" id="srok" readonly >
 								</div>
 								  								 
-								<div class="jum__calc-sliddr" id="slider_srok"></div>
+								<div class="jum__calc-sliddr" id="slider_srok" data-minValue="1" data-maxValue="30" data-defValue="5"></div>
 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="proc">ПРОЦЕНТНАЯ СТАВКА:</label>
-								  <input class="jum__calc-inp" data-default="12" type="text" id="proc" readonly >
+								  <input class="jum__calc-inp" data-default="12" type="text" id="proc" readonly data-defValue="12.9">
 								</div>
 
 								<div class="jum__calc-blck">
