--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -125,7 +125,8 @@
 					</div>
 					<div class="knoww__input-wrr">
 						<label>Телефон <span class="req">*</span></label>
-						<input type="text" name="kd_name" placeholder="+79999999999">
+						<!-- <input type="text" name="kd_name" placeholder="+79999999999"> -->
+						<input type="text" name="kd_name" class="kd-inp__phone" placeholder="+7(999)-999-99-99">
 					</div>
 					<div class="knoww__input-wrr">
 						<label>Удобное время звонка <span class="req">*</span></label>
@@ -198,7 +199,8 @@
 						
 						<div class="knoww__input-wrr">
 							<label>Телефон <span class="req">*</span></label>
-							<input type="text" name="kd_name" placeholder="8-999-999-99-99">
+							<!-- <input type="text" name="kd_name" placeholder="8-999-999-99-99"> -->
+							<input type="text" name="kd_name" class="kd-inp__phone" placeholder="+7(999)-999-99-99">
 						</div>	
 
 						<div class="knoww__input-wrr">
