--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,11 @@
 									ТС или паспорта самоходной 
 									машины
 								</div>
-								<button class="to-mod butt">ОФОРМИТЬ</button>
+
+								<div class="jum__buttz">
+									<button class="to-calcc butt">РАССЧИТАТЬ</button>
+									<button class="to-mod butt">ОФОРМИТЬ</button>
+								</div>
 							</div>
 
 							<div class="jum__cont-itt">
@@ -109,7 +113,11 @@
 									успейте получить автокредит по сниженной <br>
 									процентной ставке - только до 30 октября
 								</div>
-								<button class="to-mod butt">ОФОРМИТЬ</button>
+								<div class="jum__buttz">
+									<button class="to-calcc butt">РАССЧИТАТЬ</button>
+									<button class="to-mod butt">ОФОРМИТЬ</button>
+								</div>
+
 								<ul class="jum__lisst offerr__bulls">
 									<li>По двум документам</li>
 									<li>Решение за 1 час</li>
@@ -123,7 +131,10 @@
 									Lorem ipsum dolor sit amet, <br>
 									consectetur adipisicing elit
 								</div>
-								<button class="to-mod butt">ОФОРМИТЬ</button>
+								<div class="jum__buttz">
+									<button class="to-calcc butt">РАССЧИТАТЬ</button>
+									<button class="to-mod butt">ОФОРМИТЬ</button>
+								</div>
 								<ul class="jum__lisst offerr__bulls">
 									<li>По смешной % ставке 8,5%</li>
 									<li>Специальная гос программа</li>
@@ -137,7 +148,10 @@
 									сниженной процентной ставке - <br>
 									только до 30 октября
 								</div>
-								<button class="to-mod butt">ОФОРМИТЬ</button>
+								<div class="jum__buttz">
+									<button class="to-calcc butt">РАССЧИТАТЬ</button>
+									<button class="to-mod butt">ОФОРМИТЬ</button>
+								</div>
 								<ul class="jum__lisst offerr__bulls">
 									<li>Без первоначального взноса</li>
 									<li>Без справки 2НДФЛ</li>
@@ -152,7 +166,10 @@
 									кредит наличными с любой кредитной <br>
 									историей под залог недвижимости
 								</div>
-								<button class="to-mod butt">ОФОРМИТЬ</button>
+								<div class="jum__buttz">
+									<button class="to-calcc butt">РАССЧИТАТЬ</button>
+									<button class="to-mod butt">ОФОРМИТЬ</button>
+								</div>
 							</div>
 
 							<div class="jum__cont-itt">
@@ -160,7 +177,10 @@
 									Успей получить кредит наличными по <br>
 									сниженной % ставке - только до 30 октября
 								</div>
-								<button class="to-mod butt">ОФОРМИТЬ</button>
+								<div class="jum__buttz">
+									<button class="to-calcc butt">РАССЧИТАТЬ</button>
+									<button class="to-mod butt">ОФОРМИТЬ</button>
+								</div>
 								<ul class="jum__lisst offerr__bulls">
 									<li>Кредит наличными за й час</li>
 									<li>Без залога и поручителей</li>
@@ -173,7 +193,10 @@
 								<div class="jum__titl">
 									ПОЛУЧИ НАЛИЧНЫЕ ПОД ПТС
 								</div>
-								<button class="to-mod butt">ОФОРМИТЬ</button>
+								<div class="jum__buttz">
+									<button class="to-calcc butt">РАССЧИТАТЬ</button>
+									<button class="to-mod butt">ОФОРМИТЬ</button>
+								</div>
 								<ul class="jum__lisst offerr__bulls">
 									<li>За 1 час</li>
 									<li>С любой кредитной историей</li>
@@ -186,7 +209,10 @@
 									СДЕЛАЙ СВОИ КРЕДИТЫ <br>
 									ВЫГОДНЕЕ
 								</div>
-								<button class="to-mod butt">ОФОРМИТЬ</button>
+								<div class="jum__buttz">
+									<button class="to-calcc butt">РАССЧИТАТЬ</button>
+									<button class="to-mod butt">ОФОРМИТЬ</button>
+								</div>
 								<ul class="jum__lisst offerr__bulls">
 									<li>Уменьшение % по всем кредитным <br> обязательствам</li>
 									<li>Объединение всех кредитов и карт в один <br> договор</li>
@@ -199,7 +225,10 @@
 									подбор самого выгодного тарифа на <br>
 									рынке страхования: осаго, каско.
 								</div>
-								<button class="to-mod butt">РАССЧИТАТЬ СТРАХОВКУ</button>
+								<div class="jum__buttz">
+									<button class="to-calcc butt">РАССЧИТАТЬ</button>
+									<button class="to-mod butt">ОФОРМИТЬ</button>
+								</div>
 								<ul class="jum__lisst offerr__bulls">
 									<li>Имущество</li>
 									<li>Жизнь и здоровье</li>
