--- a/src/ipoteka.html
+++ b/src/ipoteka.html
@@ -34,7 +34,7 @@
  
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 d-n-1200">
 					<div class="jum__wrr-1 jum__wrr">
 						
 						<div class="jum__calc-wrr">
