--- a/src/parts/featt-1.html
+++ b/src/parts/featt-1.html
@@ -3,86 +3,114 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-1.png" alt="" class="featt__img">
-						<div class="featt__title">
-							помогаем экономить
+						<div class="featt__blck">
+							<img src="img/featt-1.png" alt="" class="featt__img">								
 						</div>
-						<div class="featt__descr">
-							При подаче заявки через нас <br>
-							действуют специальные <br>
-							партнерские скидки
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="featt__wrr">
-						<img src="img/featt-2.png" alt="" class="featt__img">
-						<div class="featt__title">
-							всего одна заявка
-						</div>
-						<div class="featt__descr">
-							Вся волокита - на кредитного <br>
-							специалиста Финансовых <br>
-							решений
+						<div class="featt__blck">
+							<div class="featt__title">
+								помогаем экономить
+							</div>
+							<div class="featt__descr">
+								При подаче заявки через нас 
+								действуют специальные 
+								партнерские скидки
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-3.png" alt="" class="featt__img">
-						<div class="featt__title">
-							самое выгодное
+						<div class="featt__blck">
+							<img src="img/featt-2.png" alt="" class="featt__img">								
 						</div>
-						<div class="featt__descr">
-							Выбор лучшего предложения <br>
-							из более 40 банков и <br>
-							страховых
+						<div class="featt__blck">
+							<div class="featt__title">
+								всего одна заявка
+							</div>
+							<div class="featt__descr">
+								Вся волокита - на кредитного 
+								специалиста Финансовых
+								решений
+							</div>
+						</div>	
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<div class="featt__blck">
+							<img src="img/featt-3.png" alt="" class="featt__img">
 						</div>
+						<div class="featt__blck">
+							<div class="featt__title">
+								самое выгодное
+							</div>
+							<div class="featt__descr">
+								Выбор лучшего предложения 
+								из более 40 банков и 
+								страховых
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row hidden-xs">
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-4.png" alt="" class="featt__img">
-						<div class="featt__title">
-							экономия времени
+						<div class="featt__blck">
+							<img src="img/featt-4.png" alt="" class="featt__img">
 						</div>
-						<div class="featt__descr">
-							Быстрое рассмотрение и 
-							сопровождение заявок по 
-							партнерским каналам
-						</div>
+						<div class="featt__blck">
+							<div class="featt__title">
+								экономия времени
+							</div>
+							<div class="featt__descr">
+								Быстрое рассмотрение и 
+								сопровождение заявок по 
+								партнерским каналам
+							</div>
+						</div>	
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-5.png" alt="" class="featt__img">
-						<div class="featt__title">
-							больше одобрения
+						<div class="featt__blck">
+
+							<img src="img/featt-5.png" alt="" class="featt__img">
 						</div>
-						<div class="featt__descr">
-							Индивидуальный подход, 
-							правильно заполненные 
-							документы и наш опыт 
-							увеличивают вероятность 
-							одобрения выбранного 
-							кредита.
-						</div>
+						
+						<div class="featt__blck">
+
+							<div class="featt__title">
+								больше одобрения
+							</div>
+							<div class="featt__descr">
+								Индивидуальный подход, 
+								правильно заполненные 
+								документы и наш опыт 
+								увеличивают вероятность 
+								одобрения выбранного 
+								кредита.
+							</div>
+						</div>	
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-6.png" alt="" class="featt__img">
-						<div class="featt__title">
-							кредитные истории
+						<div class="featt__blck">
+
+							<img src="img/featt-6.png" alt="" class="featt__img">
 						</div>
-						<div class="featt__descr">
-							Доступ ко всем бюро 
-							кредитных историй помогает 
-							улучшить результат.
-						</div>
+						<div class="featt__blck">
+							<div class="featt__title">
+								кредитные истории
+							</div>
+							<div class="featt__descr">
+								Доступ ко всем бюро 
+								кредитных историй помогает 
+								улучшить результат.
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
