--- a/src/parts/featt-2.html
+++ b/src/parts/featt-2.html
@@ -3,44 +3,56 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="featt__wrr">
-					<img src="img/featt-1-2.png" alt="" class="featt__img">
-					<div class="featt__title">
-						помогаем экономить
+					<div class="featt__blck">
+						<img src="img/featt-1-2.png" alt="" class="featt__img">
 					</div>
-					<div class="featt__descr">
-						Подбираем наименьшие % <br>
-						ставки на данный момент
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="featt__wrr">
-					<img src="img/featt-2.png" alt="" class="featt__img">
-					<div class="featt__title">
-						всего одна заявка
-					</div>
-					<div class="featt__descr">
-						Вся волокита - на кредитного <br>
-						специалиста Финансовых <br>
-						решений
+					<div class="featt__blck">
+						<div class="featt__title">
+							помогаем экономить
+						</div>
+						<div class="featt__descr">
+							Подбираем наименьшие % <br>
+							ставки на данный момент
+						</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="featt__wrr">
-					<img src="img/featt-3.png" alt="" class="featt__img">
-					<div class="featt__title">
-						без справок
+					<div class="featt__blck">
+						<img src="img/featt-2.png" alt="" class="featt__img">
 					</div>
-					<div class="featt__descr">
-						Без подтверждения доходов, <br>
-						справок и поручителей
+					<div class="featt__blck">
+						<div class="featt__title">
+							всего одна заявка
+						</div>
+						<div class="featt__descr">
+							Вся волокита - на кредитного <br>
+							специалиста Финансовых <br>
+							решений
+						</div>
 					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="featt__wrr">
+					<div class="featt__blck">
+						<img src="img/featt-3.png" alt="" class="featt__img">
+					</div>
+					<div class="featt__blck">	
+						<div class="featt__title">
+							без справок
+						</div>
+						<div class="featt__descr">
+							Без подтверждения доходов, <br>
+							справок и поручителей
+						</div>
+					</div>	
 				</div>
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="row hidden-xs">
 			<div class="col-md-4">
 				<div class="featt__wrr">
 					<img src="img/featt-4-2.png" alt="" class="featt__img">
