--- a/src/strahovka.html
+++ b/src/strahovka.html
@@ -69,42 +69,55 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-1-2.png" alt="" class="featt__img">
-						<div class="featt__title">
-							экономия
+						<div class="featt__blck">
+							<img src="img/featt-1-2.png" alt="" class="featt__img">
 						</div>
-						<div class="featt__descr">
-							При оформлении страхования <br> 
-							через нас действуют <br>
-							специальные партнерские <br>
-							скидки
-						</div>
+						<div class="featt__blck">
+							<div class="featt__title">
+								экономия
+							</div>
+							<div class="featt__descr">
+								При оформлении страхования <br> 
+								через нас действуют <br>
+								специальные партнерские <br>
+								скидки
+							</div>
+						</div>	
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-3.png" alt="" class="featt__img">
-						<div class="featt__title">
-							самое выгодное
+						<div class="featt__blck">
+							<img src="img/featt-3.png" alt="" class="featt__img">
 						</div>
-						<div class="featt__descr">
-							Выбор объективно лучшего <br>
-							предложения на рынке
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="featt__wrr">
-						<img src="img/featt-2.png" alt="" class="featt__img">
-						<div class="featt__title">
-							всего одна заявка
-						</div>
-						<div class="featt__descr">
-							Не придется ездить по разным <br>
-							офисам и ждать очередь - все <br>
-							страховые в одном месте!
+						<div class="featt__blck">
 
+							<div class="featt__title">
+								самое выгодное
+							</div>
+							<div class="featt__descr">
+								Выбор объективно лучшего <br>
+								предложения на рынке
+							</div>
 						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="featt__wrr">
+						<div class="featt__blck">
+							<img src="img/featt-2.png" alt="" class="featt__img">
+						</div>
+						<div class="featt__blck">
+							<div class="featt__title">
+								всего одна заявка
+							</div>
+							<div class="featt__descr">
+								Не придется ездить по разным <br>
+								офисам и ждать очередь - все <br>
+								страховые в одном месте!
+
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
