--- a/src/parts/featt-3.html
+++ b/src/parts/featt-3.html
@@ -3,31 +3,43 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-1-3.png" alt="" class="featt__img">
-						<div class="featt__descr">
-							Автомобиль остается у <br> владельца
+						<div class="featt__blck">
+							<img src="img/featt-1-3.png" alt="" class="featt__img">
 						</div>
+						<div class="featt__blck">
+							<div class="featt__descr">
+								Автомобиль остается у <br> владельца
+							</div>
+						</div>	
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-2-3.png" alt="" class="featt__img">
-						<div class="featt__descr">
-							До 80% рыночной стоимости
+						<div class="featt__blck">
+							<img src="img/featt-2-3.png" alt="" class="featt__img">
 						</div>
+						<div class="featt__blck">	
+							<div class="featt__descr">
+								До 80% рыночной стоимости
+							</div>
+						</div>	
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featt__wrr">
-						<img src="img/featt-3-3.png" alt="" class="featt__img">
-						<div class="featt__descr">
-							От 75.000 до 1.000.000 рублей
+						<div class="featt__blck">
+							<img src="img/featt-3-3.png" alt="" class="featt__img">
 						</div>
+						<div class="featt__blck">
+							<div class="featt__descr">
+								От 75.000 до 1.000.000 рублей
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row hidden-xs">
 				<div class="col-md-4">
 					<div class="featt__wrr">
 						<img src="img/featt-4-3.png" alt="" class="featt__img">
