--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="nav__wrr">
+						<div class="nav__close"></div>
 						<ul class="nav__menu">
 							<li><a href="#">Кредит</a></li>
 							<li><a href="#">Ипотека</a></li>
@@ -53,13 +54,13 @@
 									<a href="avtokredit.html" class="button">Автокредит Б/У</a>
 									<a href="#" class="button acct">Под залог недвиж-ти</a>
 								</div>
-
+ 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="summ">СУММА КРЕДИТА (РУБ.)</label>
 								  <input class="jum__calc-inp" type="text" id="summ" readonly >
 								</div>
 								  								 
-								<div class="jum__calc-sliddr" id="slider_summ" data-minValue="100000" data-maxValue="10000000" data-defValue="300000"></div>
+								<div class="jum__calc-sliddr" id="slider_summ" data-minValue="100000" data-maxValue="10000000" data-defValue="1000000"></div>
 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="srok">СРОК КРЕДИТА (ЛЕТ)</label>
@@ -70,7 +71,7 @@
 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="proc">ПРОЦЕНТНАЯ СТАВКА:</label>
-								  <input class="jum__calc-inp" data-default="12" type="text" id="proc" readonly data-defValue="12.9">
+								  <input class="jum__calc-inp" type="text" id="proc" readonly data-defValue="12.9">
 								</div>
 
 								<div class="jum__calc-blck">
