--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -47,6 +47,12 @@
 						</div>
 						<div class="head__itt head__itt-5">
 							<button class="to-mod butt" data-targg=".modd-1">Заказать звонок</button>
+							<button class="to-mapp"></button>
+							<button class="hamburger hamburger--collapse" type="button">
+							  <span class="hamburger-box">
+							    <span class="hamburger-inner"></span>
+							  </span>
+							</button>
 						</div>		
 					</div>
 				</div>
