--- a/src/podzalog.html
+++ b/src/podzalog.html
@@ -6,6 +6,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="nav__wrr">
+						<div class="nav__close"></div>
 						<ul class="nav__menu">
 							<li><a href="#">Кредит</a></li>
 							<li><a href="#">Ипотека</a></li>
@@ -49,12 +50,6 @@
 									<a href="avtokredit.html" class="button">Автокредит Б/У</a>
 									<a href="#" class="button acct">Под залог недвиж-ти</a>
 
-									<!-- <button>Ипотека</button>
-									<button>Потребительский</button>
-									<button>Под залог ПТС</button>
-									<button>Для бизнеса</button>
-									<button>Автокредит Б/У</button>
-									<button class="acct">Под залог недвиж-ти</button> -->
 								</div>
 
 								<div class="jum__calc-blck">
@@ -62,18 +57,18 @@
 								  <input class="jum__calc-inp" type="text" id="summ" readonly >
 								</div>
 								  								 
-								<div class="jum__calc-sliddr" id="slider_summ"></div>
+								<div class="jum__calc-sliddr" id="slider_summ" data-minValue="100000" data-maxValue="10000000" data-defValue="1000000"></div>
 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="srok">СРОК КРЕДИТА (ЛЕТ)</label>
 								  <input class="jum__calc-inp" type="text" id="srok" readonly >
 								</div>
 								  								 
-								<div class="jum__calc-sliddr" id="slider_srok"></div>
+								<div class="jum__calc-sliddr" id="slider_srok" data-minValue="1" data-maxValue="30" data-defValue="5"></div>
 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="proc">ПРОЦЕНТНАЯ СТАВКА:</label>
-								  <input class="jum__calc-inp" data-default="12" type="text" id="proc" readonly >
+								  <input class="jum__calc-inp" type="text" id="proc" readonly data-defValue="12.9">
 								</div>
 
 								<div class="jum__calc-blck">
