--- a/src/strahovka.html
+++ b/src/strahovka.html
@@ -6,6 +6,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="nav__wrr">
+						<div class="nav__close"></div>
 						<ul class="nav__menu">
 							<li><a href="#">Кредит</a></li>
 							<li><a href="#">Ипотека</a></li>
