--- a/src/avtokredit.html
+++ b/src/avtokredit.html
@@ -56,7 +56,7 @@
 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="summ">СУММА КРЕДИТА (РУБ.)</label>
-								  <input class="jum__calc-inp" type="text" id="summ" readonly >
+								  <input class="jum__calc-inp" type="text" id="summ" >
 								</div>
 								  								 
 								<div class="jum__calc-sliddr" id="slider_summ" data-minValue="100000" data-maxValue="5000000" data-defValue="300000"></div>
@@ -95,7 +95,10 @@
 							успейте получить автокредит по сниженной <br>
 							процентной ставке - только до 30 октября
 						</div>
-						<button class="to-mod butt">ОФОРМИТЬ</button>
+						<div class="jum__buttz">
+							<button class="to-calcc butt">РАССЧИТАТЬ</button>
+							<button class="to-mod butt">ОФОРМИТЬ</button>
+						</div>
 						
 
 						<ul class="jum__lisst offerr__bulls">
