--- a/src/biznesu.html
+++ b/src/biznesu.html
@@ -53,10 +53,10 @@
 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="summ">СУММА КРЕДИТА (РУБ.)</label>
-								  <input class="jum__calc-inp" type="text" id="summ" readonly >
+								  <input class="jum__calc-inp" type="text" id="summ">
 								</div>
 								  								 
-								<div class="jum__calc-sliddr" id="slider_summ" data-minValue="1000000" data-maxValue="100000000" data-defValue="20000000"></div>
+								<div class="jum__calc-sliddr" id="slider_summ" data-minValue="1000000" data-maxValue="100000000" data-defValue="2000000"></div>
 
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="srok">СРОК КРЕДИТА (МЕС)</label>
@@ -92,8 +92,10 @@
 							Lorem ipsum dolor sit amet, <br>
 							consectetur adipisicing elit
 						</div>
-						<button class="to-mod butt">ОФОРМИТЬ</button>
-						
+						<div class="jum__buttz">
+							<button class="to-calcc butt">РАССЧИТАТЬ</button>
+							<button class="to-mod butt">ОФОРМИТЬ</button>
+						</div>
 
 						<ul class="jum__lisst offerr__bulls">
 							<li>По смешной % ставке 8,5%</li>
