--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
  
 								<div class="jum__calc-blck">
 									<label class="jum__calc-label" for="summ">СУММА КРЕДИТА (РУБ.)</label>
-								  <input class="jum__calc-inp" type="text" id="summ" readonly >
+								  <input class="jum__calc-inp" type="text" id="summ">
 								</div>
 								  								 
 								<div class="jum__calc-sliddr" id="slider_summ" data-minValue="100000" data-maxValue="10000000" data-defValue="1000000"></div>
