--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -30,7 +30,7 @@
 						<div class="head__itt head__itt-3">
 							<p>
 								<i class="icon icon-head2"></i>
-								<a href="#">
+								<a href="#" class="go-to-map">
 									Ставрополь, ул. Ленина, 219, оф. 604
 								</a>
 							</p>
@@ -47,7 +47,7 @@
 						</div>
 						<div class="head__itt head__itt-5">
 							<button class="to-mod butt" data-targg=".modd-1">Заказать звонок</button>
-							<button class="to-mapp"></button>
+							<button class="to-mapp go-to-map"></button>
 							<button class="hamburger hamburger--collapse" type="button">
 							  <span class="hamburger-box">
 							    <span class="hamburger-inner"></span>
